public/stylesheets/content.css
body { font-size: 10pt; line-height: 1.4; font-family: arial, sans-serif; margin: 0; background: #f8f8f8; }
#tinymce { background: #fff; }
#preview, #page, #topBar { font-size: 10pt; }
h1,h2,h3,h4,h5,h6,p,section div { margin-top: 0; margin-bottom: 12px; font-size: 1em; min-height: 1.4em; }
#preview section div, #page section div { padding-left: 15px; }

#wrapper #page .details, #wrapper table div { padding-left: 0; margin: 0; min-height: 0; }

section:last-child div, section:last-child p { margin-bottom: 0; }
h1 { font-size: 14pt; margin: 0; font-weight: normal; }
hgroup { margin-bottom: 12px; }
h2 { font-size: 12pt; }
h3 { font-size: 10pt; font-style:italic; }

.text { padding-top: 10px; }

.none { list-style: none; }

.hide { display: none; }

.example { display: none; }

ul.none { list-style: none; padding-left: 0; margin: 0 0 12px; }

@media print {
    #preview { width: auto; }
    #preview section { min-height: 0; border: 0 none; margin: 0; padding: 0; }
    #preview section#policies { page-break-after:always; }
    #preview section:last-child { page-break-after: auto; }
    #preview section div { page-break-inside: avoid; }
    #preview_control { display: none !important; }
}
a#view_url{font-size:11px;}

